--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <a href="mailto:doxbin@lenzy.rest" title="Email"><i class="fas fa-envelope"></i></a>
   </div>
 
-  <img src="https://i.ibb.co/mVV6tS4m/bec3ab5110fdfeb1a8335e9e53d510b0.png" alt="Lenzy Profile" />
+  <img src="https://i.ibb.co/RpqqyGzx/5487923cbcce9dee4cd08b8144a3e506.jpg" alt="Lenzy Profile" />
   <h1>Lenzy</h1>
   <h2>Discord.gg/input</h2>
   <p>Pentester | Coder | Entrepreneur<br>doxbin@lenzy.rest</p>
