--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 
   <img src="https://i.ibb.co/KcSZrk2n/91a8112fde75193abfc769d4a9c047ba.jpg" alt="Lenzy Profile" />
   <h1>Lenzy</h1>
-  <h2>Discord.gg/input</h2>
-  <p>Pentester | Coder | Entrepreneur<br>doxbin@lenzy.rest</p>
+  <h2>Contact For</h2>
+  <p>Bot Hosting | Bio Site | C2<br>doxbin@lenzy.rest</p>
 
   <div class="social">
     <a href="https://instagram.com/lenzy.dll" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
