--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
     <a href="mailto:doxbin@lenzy.rest" title="Email"><i class="fas fa-envelope"></i></a>
   </div>
 
-  <img src="https://i.ibb.co/KcSZrk2n/91a8112fde75193abfc769d4a9c047ba.jpg" alt="Lenzy Profile" />
+  <img src="https://i.ibb.co/7tqssgpD/42fe37673b36706c43881b2d233adde1.jpg" alt="Lenzy Profile" />
   <h1>Lenzy</h1>
   <h2>Contact For</h2>
-  <p>Bot Hosting | Bio Site | C2<br>doxbin@lenzy.rest</p>
+  <p>Bot Hosting | Bio Site | Botnet<br>doxbin@lenzy.rest</p>
 
   <div class="social">
     <a href="https://instagram.com/lenzy.dll" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
