--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
       position: relative;
       padding-bottom: 10px;
       opacity: 0.9;
-      text-shadow: 0 0 10px rgba(255, 50, 50, 0.5);
     }
 
     h1::after {
@@ -200,28 +199,20 @@
       margin-bottom: 25px;
       z-index: 2;
       font-family: 'JetBrains Mono', monospace;
+      color: #a0a0a0;
       letter-spacing: 1px;
-      background: linear-gradient(135deg, #ff9999, #ff3232, #ffffff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      text-shadow: 0 0 8px rgba(255, 50, 50, 0.4);
     }
 
     p {
       max-width: 600px;
       margin: 0 auto 40px;
       font-size: 1.1rem;
+      color: #b0b0b0;
       z-index: 2;
       text-align: center;
       line-height: 1.7;
       font-weight: 300;
       padding: 0 20px;
-      background: linear-gradient(135deg, #ff9999, #ff3232, #ffffff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      text-shadow: 0 0 5px rgba(255, 50, 50, 0.3);
     }
 
     .social {
@@ -270,21 +261,17 @@
       position: absolute;
       bottom: 25px;
       font-size: 0.9rem;
+      color: #555;
       z-index: 2;
       font-family: 'JetBrains Mono', monospace;
       letter-spacing: 1px;
       opacity: 0.8;
       transition: all 0.3s ease;
-      background: linear-gradient(135deg, #ff9999, #ff3232, #ffffff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      text-shadow: 0 0 5px rgba(255, 50, 50, 0.3);
     }
 
     .footer:hover {
+      color: #ff3232;
       opacity: 1;
-      text-shadow: 0 0 10px rgba(255, 50, 50, 0.5);
     }
 
     .glow {
