--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lenzy's Site</title>
+    <title>Lenzy</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
