--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <h1>Lenzy</h1>
         
         <div class="description">
-            Hi im Lenzy Im 15 Years Old <span class="purple-text">I code python</span> and <span class="purple-text">Do Projects</span>. As do Discord Tools , Botnets , Websites , Bots
+            Hi im Lenzy Im 15 Years Old <span class="purple-text">I code python</span> and <span class="purple-text">Do Projects</span>. As Discord Tools , Botnets , Websites , Bots
         </div>
         
         <div class="divider"></div>
