--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div style="border: 3px solid #ff0000; border-radius: 8px; padding: 15px; max-width: 300px; background-color: #1a0000; font-family: Arial, sans-serif; text-align: center; box-shadow: 0 0 15px #ff0000;">
+    <h2 style="color: #ff0000; margin: 0 0 10px 0; text-shadow: 0 0 5px #ff0000;">Don't Click</h2>
+    <p style="color: #ff6b6b; margin: 0; font-size: 14px;">This Site Grabs Your IP</p>
+    <div style="margin-top: 15px;">
+        <a href="YOUR_SITE_URL_HERE" target="_blank" style="display: inline-block; padding: 8px 20px; background-color: #ff0000; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; transition: all 0.3s;">Visit Site</a>
+    </div>
+</div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenzy</title>
