--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div style="border: 3px solid #ff0000; border-radius: 8px; padding: 15px; max-width: 300px; background-color: #1a0000; font-family: Arial, sans-serif; text-align: center; box-shadow: 0 0 15px #ff0000;">
-    <h2 style="color: #ff0000; margin: 0 0 10px 0; text-shadow: 0 0 5px #ff0000;">Don't Click</h2>
-    <p style="color: #ff6b6b; margin: 0; font-size: 14px;">This Site Grabs Your IP</p>
-    <div style="margin-top: 15px;">
-        <a href="YOUR_SITE_URL_HERE" target="_blank" style="display: inline-block; padding: 8px 20px; background-color: #ff0000; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; transition: all 0.3s;">Visit Site</a>
-    </div>
+    <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <title>Dont Click</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+        <meta name="description" content="Dead" />
+        <meta property="og:title" content="This Site Will Grab Your IP" />
+        <meta property="og:description" content="Dead" />
+        <meta
+            property="og:image"
+            content="https://cdn.discordapp.com/attachments/1358642473030652007/1359285262051708948/8384C7BE-DB86-4E77-8662-D1BDE5F0C5BE_1.gif?ex=67f6ec8c&is=67f59b0c&hm=0bf057b02f121df0931d9a19fede6fa69a4cd3b856961aa3d6b980a4790f6eeb&"
+        />
+        <meta property="og:image:width" content="80" />
+        <meta property="og:image:height" content="80" />
+        <meta property="og:url" content="lenzy.pro" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:title" content="Dont Click" />
+        <meta name="twitter:description" content="This Site Grabs Your IP" />
+        <meta
+            name="twitter:image"
+            content="https://cdn.discordapp.com/attachments/1358642473030652007/1359285262051708948/8384C7BE-DB86-4E77-8662-D1BDE5F0C5BE_1.gif?ex=67f6ec8c&is=67f59b0c&hm=0b
 </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
