--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>Dont Click</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-        <meta name="description" content="Dead" />
-        <meta property="og:title" content="This Site Will Grab Your IP" />
-        <meta property="og:description" content="Dead" />
+        <meta name="description" content="Lenzy" />
+        <meta property="og:title" content="Dont Click" />
+        <meta property="og:description" content="This Site Will Grab Your IP" />
         <meta
             property="og:image"
-            content="https://cdn.discordapp.com/attachments/1358642473030652007/1359285262051708948/8384C7BE-DB86-4E77-8662-D1BDE5F0C5BE_1.gif?ex=67f6ec8c&is=67f59b0c&hm=0bf057b02f121df0931d9a19fede6fa69a4cd3b856961aa3d6b980a4790f6eeb&"
+            content="https://media.discordapp.net/attachments/1370143462401511436/1374777446909608189/5487923cbcce9dee4cd08b8144a3e506.jpg?ex=682f48c5&is=682df745&hm=1be9bdde7b2b3654587e7fcbc6811b499dab3750cc54fc0a505ac1052df57d08&=&format=webp"
         />
         <meta property="og:image:width" content="80" />
         <meta property="og:image:height" content="80" />
@@ -21,7 +21,7 @@
         <meta name="twitter:description" content="This Site Grabs Your IP" />
         <meta
             name="twitter:image"
-            content="https://cdn.discordapp.com/attachments/1358642473030652007/1359285262051708948/8384C7BE-DB86-4E77-8662-D1BDE5F0C5BE_1.gif?ex=67f6ec8c&is=67f59b0c&hm=0b
+            content="https://media.discordapp.net/attachments/1370143462401511436/1374777446909608189/5487923cbcce9dee4cd08b8144a3e506.jpg?ex=682f48c5&is=682df745&hm=1be9bdde7b2b3654587e7fcbc6811b499dab3750cc54fc0a505ac1052df57d08&=&format=webp"
 </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
