--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Dont Click</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
         <meta name="description" content="Lenzy" />
-        <meta property="og:title" content="Dont Click" />
+        <meta property="og:title" content="Lenzy" />
         <meta property="og:description" content="This Site Will Grab Your IP" />
         <meta
             property="og:image"
