--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
         <meta name="description" content="Lenzy" />
         <meta property="og:title" content="Lenzy" />
-        <meta property="og:description" content="This Site Will Grab Your IP" />
+        <meta property="og:description" content="Lenzii" />
         <meta
             property="og:image"
             content="https://media.discordapp.net/attachments/1370143462401511436/1374777446909608189/5487923cbcce9dee4cd08b8144a3e506.jpg?ex=682f48c5&is=682df745&hm=1be9bdde7b2b3654587e7fcbc6811b499dab3750cc54fc0a505ac1052df57d08&=&format=webp"
@@ -18,7 +18,7 @@
         <meta property="og:type" content="website" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:title" content="Dont Click" />
-        <meta name="twitter:description" content="This Site Grabs Your IP" />
+        <meta name="twitter:description" content="Lenzii" />
         <meta
             name="twitter:image"
             content="https://media.discordapp.net/attachments/1370143462401511436/1374777446909608189/5487923cbcce9dee4cd08b8144a3e506.jpg?ex=682f48c5&is=682df745&hm=1be9bdde7b2b3654587e7fcbc6811b499dab3750cc54fc0a505ac1052df57d08&=&format=webp"
