--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Dont Click</title>
+        <title>Lenzy</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
         <meta name="description" content="Lenzy" />
         <meta property="og:title" content="Lenzy" />
